--- a/app/src/main/res/layout-land/carousel.xml
+++ b/app/src/main/res/layout-land/carousel.xml
@@ -9,11 +9,12 @@
         android:id="@+id/image1"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/round_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="image1"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintWidth_percent="0.35"/>
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintWidth_percent="1"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
