--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -119,15 +119,15 @@
         android:minHeight="48dp"
         android:onClick="signup"
         android:text="@string/sign_up"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/createacc"
-        app:layout_constraintTop_toBottomOf="@+id/signinB"
-        app:layout_constraintVertical_bias="0.118"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createacc"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.2"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -143,10 +143,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
-        app:layout_constraintVertical_bias="0.118"
+        app:layout_constraintVertical_bias="0.106"
         app:layout_constraintWidth_percent="0.55" />
 
     <ProgressBar
