--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -12,8 +12,8 @@
         android:layout_height="0dp"
         android:background="@drawable/round_corners"
         android:contentDescription="@string/map"
-        android:scaleType="fitCenter"
-        android:src="@drawable/map2"
+        android:scaleType="centerInside"
+        android:src="@drawable/journey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
@@ -49,10 +49,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintHorizontal_bias="0.808"
+        app:layout_constraintHorizontal_bias="0.811"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.036"
+        app:layout_constraintVertical_bias="0.049"
         app:layout_constraintWidth_percent="0.20"
         tools:srcCompat="@tools:sample/avatars"
         tools:visibility="visible" />
