--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintWidth_percent="1"/>
 
     <Button
@@ -79,15 +79,16 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/language"
-        app:layout_constraintWidth_percent="0.65" />
+        app:layout_constraintWidth_percent="0.65"
+        android:contentDescription="@string/qrcode" />
 
     <TextView
         android:id="@+id/nameP"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textAlignment="center"
         android:autoSizeMaxTextSize="34sp"
         android:autoSizeTextType="uniform"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +96,7 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.128"
+        app:layout_constraintVertical_bias="0.16"
         app:layout_constraintWidth_percent="0.9" />
 
     <TextView
