--- a/app/src/main/res/layout/carousel.xml
+++ b/app/src/main/res/layout/carousel.xml
@@ -88,4 +88,23 @@
         app:layout_constraintVertical_bias="0.437"
         app:layout_constraintWidth_percent="0.805" />
 
+    <TextView
+        android:id="@+id/textViewNoDelivery"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:autoSizeMaxTextSize="28sp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/nodelivery"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/delivery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.8"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
