--- a/app/src/main/res/drawable/map_round.xml
+++ b/app/src/main/res/drawable/map_round.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#48FFFFFF"/>
-    <stroke android:color="#000" android:width="1dp"/>
+    <solid android:color="#D9FFFFFF"/>
+    <stroke android:color="#D9FFFFFF" android:width="1dp"/>
     <corners android:radius="20dp"/>
 </shape>
