--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="purplelight">#3F51B5</color>
     <color name="purpledark">#B1AAF3</color>
     <color name="orange">#FBAD31</color>
+    <color name="blueMap">#6A78B5FF</color>
 
 </resources>
