--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -33,13 +33,13 @@
             android:layout_height="0dp"
             android:background="#FCAC32"
             android:contentDescription="@string/logo"
-            android:scaleType="fitStart"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/quickbox_logo"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintWidth_percent="1"/>
+            app:layout_constraintWidth_percent="1"
+            app:srcCompat="@drawable/quickbox_logo" />
 
         <ImageButton
             android:id="@+id/profileH"
@@ -52,12 +52,12 @@
             android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintHorizontal_bias="0.811"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintHorizontal_bias="0.939"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.072"
-            app:layout_constraintWidth_percent="0.20"
+            app:layout_constraintVertical_bias="0.042"
+            app:layout_constraintWidth_percent="0.15"
             tools:srcCompat="@tools:sample/avatars"
             tools:visibility="visible" />
 
@@ -90,22 +90,22 @@
             app:layout_constraintWidth_percent="0.85"
             tools:ignore="VisualLintButtonSize" />
 
-        <TextView
-            android:id="@+id/nameH"
+        <ImageView
+            android:id="@+id/no_connection"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:autoSizeMaxTextSize="24sp"
-            android:autoSizeTextType="uniform"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintHorizontal_bias="0.91"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/logo"
+            app:layout_constraintEnd_toEndOf="@+id/logo"
+            app:layout_constraintHeight_percent="0.08"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileH"
-            app:layout_constraintVertical_bias="0.027"
-            app:layout_constraintWidth_percent="0.4" />
+            app:layout_constraintTop_toTopOf="@+id/logo"
+            app:layout_constraintVertical_bias="0.132"
+            app:layout_constraintWidth_percent="0.2"
+            app:srcCompat="@drawable/no_access"
+            tools:visibility="visible"
+            android:contentDescription="TODO" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
