--- a/app/src/main/res/layout/language.xml
+++ b/app/src/main/res/layout/language.xml
@@ -125,6 +125,7 @@
         android:text="@string/changeLang"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHeight_percent="0.05"
